@@ -81,7 +81,7 @@ REPLACE INTO `{PREFIX}site_content` VALUES (24, 'document', 'text/html', 'Extend
 REPLACE INTO `{PREFIX}site_content` VALUES (32, 'document', 'text/html', 'Design', 'Site Design', '', 'design', '', 1, 0, 0, 0, 0, '', '<h3>Credits</h3>\r\n<p>The default site''s themes are based off of validating XHTML/CSS designs by <a href="http://andreasviklund.com/">Andreas     Viklund</a>, <a title="Complete web design solutions" href="http://ziworks.com/">ziworks | Web Solutions</a> and <a href="http://www.modxhost.com">MODxHost</a>. \r\n\r\n<h3>Style examples</h3>\r\n<p>This page was created to show some of the styles built into this template. It also shows the alternative content page layout, where the left sidebar has   been removed to let the content fill the entire width of the layout.</p>\r\n<h3 onclick="new Effect.toggle( ''styles'' , ''blind'');" href="javascript:void(0)" style="cursor: pointer;">Style List (<a>show/hide</a>)</h3>\r\n<div id="styles" style="display: none;" class="stylebox">   <blockquote>\r\n<p>&quot;This is a blockquote. Use this for quotes and references to texts from other places. You can also use the class .box to create a similar boxed effect...&quot;</p>\r\n</blockquote>\r\n<h1>Heading 1 Consect etuer adipisci ngon.</h1>\r\n<h2>Heading 2 Consect etuer adipisci ngon.</h2>\r\n<h3>Heading 3 Consect etuer adipisci ngon.</h3>\r\n<h4>Heading 4 Consect etuer adipisci ngon.</h4>\r\n<h5>Heading 5 Consect etuer adipisci ngon.</h5>\r\n<h6>Heading 6 Consect etuer adipisci ngon.</h6>\r\n<ul>\r\n    <li>Unordered list, option 1</li>\r\n    <li>Unordered list, option 2</li>\r\n    <li>Unordered list, option 3\r\n    <ul>\r\n        <li>Sub-option 3:1</li>\r\n        <li>Sub-option 3:2</li>\r\n        <li>Sub-option 3:3</li>\r\n    </ul>\r\n    </li>\r\n    <li>Unordered list, option 4</li>\r\n</ul>\r\n<ol>\r\n    <li>Ordered list, option 1</li>\r\n    <li>Ordered list, option 2</li>\r\n    <li>Ordered list, option 3\r\n    <ol>\r\n        <li>Sub-option 3:1</li>\r\n        <li>Sub-option 3:2</li>\r\n        <li>Sub-option 3:3</li>\r\n    </ol>\r\n    </li>\r\n    <li>Unordered list, option 4</li>\r\n</ol>\r\n<p><a href="#">This is a regular link.</a></p>\r\n<p><strong>This is strong text, left-aligned.</strong></p>\r\n<p class="important center">This is text with the class .important, centered.</p>\r\n<p class="textright"><em>This is emphasized text, right-aligned.</em></p>\r\n<p class="big">This is text styled with the class .big.</p>\r\n<p class="small">This is small text, using the class .small. Also available     is the class <span class="green">.green</span>.</p>\r\n</div>', 1, 4, 10, 1, 1, 2, 1144904400, 1, 1160112322, 0, 0, 0, 1144912754, 1, 'Design', 0, 0, 0, 0, 0, 0, 0);
 
 
-REPLACE INTO `{PREFIX}site_content` VALUES (33, 'document', 'text/html', 'Getting Help', 'Getting Help with MODx', '', 'geting-help', '', 1, 0, 0, 0, 0, '', '<p>The <a href="http://modxcms.com/modx-team.html" target="_blank">team behind MODx</a> strives to contantly add to and refine the documentation to help you get up to speed with MODx:</p>\r\n<ul>\r\n    <li>For basic instructions on integrating custom templates into MODx, please see the <a target="_blank" href="http://modxcms.com/designer-guide.html">Designer''s Guide</a>. </li>\r\n    <li>For an introduction to working in MODx from the content editors perspectve, see the <a target="_blank" href="http://modxcms.com/editor-guide.html">Content Editor''s Guide</a>. </li>\r\n    <li>For a detailed overview of the backend &quot;manager&quot; and setting up Users and Groups, please peruse the <a target="_blank" href="http://modxcms.com/developers-guide.html">Administration Guide</a>.</li>\r\n    <li>For developers, architecture and API documentation can be found in the <a target="_blank" href="http://modxcms.com/administration-guide.html">Developer''s Guide</a>.</li>\r\n    <li>And if someone has installed this site for you, but you''re curious as to the steps they went through, please see the <a target="_blank" href="http://modxcms.com/getting-started.html">Getting Started Guide</a>.</li>\r\n</ul>\r\n\r\n<p>And don''t forget, you can always learn and ask questions at the <a href="http://www.modxcms.com/forums" target="_blank">MODx forums</a>. \r\n', 1, 4, 8, 1, 1, 2, 1144904400, 2, 1144904400, 0, 0, 0, 0, 0, 'Getting Help', 0, 0, 0, 0, 0, 0, 0);
+REPLACE INTO `{PREFIX}site_content` VALUES (33, 'document', 'text/html', 'Getting Help', 'Getting Help with MODx', '', 'geting-help', '', 1, 0, 0, 0, 0, '', '<p>The <a href="http://modxcms.com/modx-team.html" target="_blank">team behind MODx</a> strives to constantly add to and refine the documentation to help you get up to speed with MODx:</p>\r\n<ul>\r\n    <li>For basic instructions on integrating custom templates into MODx, please see the <a target="_blank" href="http://modxcms.com/designer-guide.html">Designer''s Guide</a>. </li>\r\n    <li>For an introduction to working in MODx from the content editors perspectve, see the <a target="_blank" href="http://modxcms.com/editor-guide.html">Content Editor''s Guide</a>. </li>\r\n    <li>For a detailed overview of the backend &quot;manager&quot; and setting up Users and Groups, please peruse the <a target="_blank" href="http://modxcms.com/developers-guide.html">Administration Guide</a>.</li>\r\n    <li>For developers, architecture and API documentation can be found in the <a target="_blank" href="http://modxcms.com/administration-guide.html">Developer''s Guide</a>.</li>\r\n    <li>And if someone has installed this site for you, but you''re curious as to the steps they went through, please see the <a target="_blank" href="http://modxcms.com/getting-started.html">Getting Started Guide</a>.</li>\r\n</ul>\r\n\r\n<p>And don''t forget, you can always learn and ask questions at the <a href="http://www.modxcms.com/forums" target="_blank">MODx forums</a>. \r\n', 1, 4, 8, 1, 1, 2, 1144904400, 2, 1144904400, 0, 0, 0, 0, 0, 'Getting Help', 0, 0, 0, 0, 0, 0, 0);
 
 
 REPLACE INTO `{PREFIX}site_content` VALUES (37, 'document', 'text/html', '[*loginName*]', 'The page you''re trying to reach requires a login', '', 'blog-login', '', 1, 0, 0, 0, 0, '', '<p>In order to add a blog entry, you must be logged in as a Site Admin webuser. Also, commenting on posts requires a login. <a href="[~6~]">Contact the site owner</a> for permissions to create new post, or <a href="[~5~]">create a web user account</a> to automatically receive commenting privileges. If you already have an account, please login below.</p>\r\n\r\n[!WebLogin? &tpl=`FormLogin` &loginhomeid=`3`!]', 1, 4, 12, 0, 0, 1, 1144904400, 1, 1158599931, 0, 0, 0, 0, 0, '', 0, 0, 0, 0, 0, 0, 1);
